# laboratory

./: .gitignore  .mcp.json  .skyignore  CLAUDE.md  DELIVERY.md  LAB-BUGS.md  LAB-REQUIREMENTS.md  README.md  collect_v10.py  pyproject.toml
.claude/skills/laboratory/: SKILL.md
.claude/skills/laboratory-workspace/: .gitignore  build_benchmark.py  grade.py  trigger-eval.json
.claude/skills/laboratory-workspace/fixtures/: failing.py  needs_dep.py  slow_metric.py
.claude/skills/laboratory/evals/: evals.json
.claude/skills/laboratory/examples/: 01-submit-and-watch.md  02-sweep-and-wait.md  03-live-early-kill.md  04-reconcile-leak.md
deploy/scheduler/: README.md  lab-scheduler.service  lab-scheduler.timer  scheduler.env.example
docs/guides/: cpu-backend.md  provenance-and-timeouts.md  sharded-sweeps.md
docs/proposals/: 2026-06-14-spot-instances-feature-proposal.md
docs/superpowers/plans/: 2026-06-07-lab-bugs-fixes.md  2026-06-10-deferred-scheduling.md  2026-06-14-spot-instances.md  2026-06-16-failclosed-provenance-and-timeout-message.md  2026-06-17-cpu-backend-digitalocean.md  2026-06-18-seed-sharded-sweep.md
docs/superpowers/specs/: 2026-05-31-provision-timeout-watchdog-design.md  2026-06-07-lab-bugs-fixes-design.md  2026-06-10-deferred-scheduling-design.md  2026-06-14-deferred-sweep-registration.md  2026-06-16-failclosed-provenance-and-timeout-message-design.md  2026-06-17-cpu-backend-digitalocean-design.md  2026-06-18-seed-sharded-sweep-design.md
experiments/: example_capacity.py  s1_vmax_gumbel_evt.py  s2_tempotron_decision_viz.py  s4_tmax_convergence.py  s5_gauge_threshold_norm.py  test_v10_minibatch.py  v10_confirm_run.sh  v10_curves_run.sh  v10_demo.sh  v10_demo2.sh  v10_hpo.py  v10_run.sh  v11_schedule_mechanism.py  v12_existence_oracle.py  v1_perceptron_capacity.py  v1_perceptron_capacity_gpu.py  v1_perceptron_capacity_minover.py  v2_vmax_evt.py  v3_capacity_sweep.py  v9_capacity.py  v9_derive.py
research/: 01-compute-providers.md  02-orchestration.md  03-experiment-tracking.md  04-reproducibility-and-environment.md  05-hpo-and-sweeps.md  06-gpu-tabular-acceleration.md  10-architecture.md  11-provisioner-decision.md  12-tracking-live-metrics.md  13-mcp-server.md  14-reproducibility-manifest.md  15-compute-shape.md  16-decisions.md  README.md  sources.md
research/sources/: compute-providers-raw.md  experiment-tracking-raw.md  gpu-tabular-raw.md  lab-system-raw.md  orchestration-raw.md  reproducibility-hpo-raw.md
src/lab/: __init__.py  _util.py  aggregate.py  cli.py  core.py  dashboard.py  manifest.py  mcp_server.py  metrics.py  models.py  preemption.py  redact.py  runner.py  sharding.py  sky_runner.py  storage.py  store.py
src/lab/backends/: __init__.py  base.py  local.py  skypilot.py
src/lab/scheduler/: __init__.py  bundle.py  gc.py  models.py  price.py  queue.py  r2queue.py  register.py  tick.py
tests/: helpers.py  test_aggregate_merge.py  test_aggregate_sweep.py  test_capture_diff.py  test_cli_spot.py  test_cli_wait.py  test_confirm.py  test_confirm_cli_mcp.py  test_core.py  test_cpu_backend.py  test_cpu_backend_integration.py  test_dashboard.py  test_job_state.py  test_local_backend.py  test_mcp_server.py  test_metrics.py  test_models.py  test_preemption.py  test_provenance_invariant.py  test_redact.py  test_register_provenance.py  test_retry_sweep.py  test_runner.py  test_runner_adopt.py  test_scheduler_bundle.py  test_scheduler_cli.py  test_scheduler_gc.py  test_scheduler_models.py  test_scheduler_price.py  test_scheduler_queue.py  test_scheduler_r2queue.py  test_scheduler_register.py  test_scheduler_tick.py  test_sharding.py  test_skypilot.py  test_skypilot_build.py  test_storage.py  test_store.py  test_submit_provenance.py  test_success_sentinel.py  (+8 more)
