[project]
name = "laboratory"
version = "0.1.0"
description = "Remote Experiment Runner — reproducible remote jobs with an agent-usable (MCP) interface and live observability."
readme = "README.md"
requires-python = ">=3.12"
# Experiment-runtime deps only — this is what the remote installs to RUN an experiment.
# Control-plane deps (CLI/MCP) live in the `cli` group; tracking/skypilot/r2 are extras.
dependencies = [
    "numpy<2",          # spec FR-B2: NumPy <2 pin
    "pydantic>=2",      # shared models (spec §8) + experiment config
    "hydra-core>=1.3",  # experiment config (Experiment Contract §7)
]

# Remote provisioning backend — deferred until we wire the skypilot backend (P0-remote).
# Install when needed, e.g.:  uv add "skypilot[vast]"   (vast.ai for the GPU/P1 path)
[project.optional-dependencies]
# skypilot>=0.12 pins click<8.2 (which its remote ray runtime requires) — hence the base deps
# also cap click<8.2. skypilot 0.12 uses the newer VastAI().client API, so pin vastai-sdk>=1.0
# (its [vast] extra pin is too loose — leaving it picks an old 0.2.x that lacks .client).
# `pip` is required because SkyPilot shells out to `pip3` locally during Vast provisioning,
# and uv-managed venvs don't include pip by default.
skypilot = ["skypilot[vast]>=0.12", "vastai-sdk>=1.0", "pip"]
# Durable artifact storage on Cloudflare R2 (S3-compatible) for the lab control plane.
r2 = ["boto3>=1.34"]
# Experiment tracking (opt-in; not needed to run the lab or most experiments).
tracking = ["mlflow>=2"]

[project.scripts]
lab = "lab.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]
# Control-plane deps (CLI + MCP). Default-installed for local dev (see [tool.uv].default-groups);
# the remote `uv sync --no-default-groups` skips them so experiments install only runtime deps.
cli = [
    "typer>=0.12",
    "fastmcp>=2",
]

[tool.uv]
default-groups = ["dev", "cli"]
# Cap click<8.2 as a resolution constraint (not a dependency), decoupled from any group:
# SkyPilot's remote ray runtime crashes on click>=8.2 (and skypilot 0.12 itself requires it).
# As a constraint, click is only installed where something else pulls it (typer), never on the
# lean remote — and the cap survives renaming/removing the `cli` group.
constraint-dependencies = ["click<8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
files = ["src/lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
